@@ -1,1 +1,1 @@
-NPTL 0.54 by Ulrich Drepper
+NPTL 0.55 by Ulrich Drepper
